.opsera-hcp-feb20/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcp-feb20
  labels:
    app: hcp-feb20
    tenant: opsera
spec:
  type: ClusterIP
  selector:
    app: hcp-feb20
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
